# optmagic

./: .gitignore  README.md  optmagic.py  pyproject.toml  setup.py
docs/: index.html  optmagic.html  search.js
docs/optmagic/: argument.html  index.html  pytest_action.html
docs/optmagic/tests/: expose_the_class.html  index.html  simple_car_class.html  test_via_shell.html
optmagic/: __init__.py  argument.py  pytest_action.py
optmagic/tests/: expose_the_class.py  simple_car_class.py  test_via_shell.py
test/: expose_class.py  expose_the_class.py  simple_class.py  test_via_shell.py
